--- a/videophone.css
+++ b/videophone.css
@@ -82,7 +82,7 @@ body{
 }
 .css span{
     align-items: baseline;
-    padding-top: 25%;
+    padding-top: 100px;
     padding-left: 6px;
     width: 25%;
     font-size: 24px;
